--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,37 @@
 h1 {
-  color: blue;
+  font-size: 28px;
+  line-height: 32px;
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 42px;
+  line-height: 50px;
+  margin: 1rem 0;
+}
+
+h3 {
+  font-size: 20px;
+  line-height: 24px;
+  margin: 1rem 0 2rem;
+}
+
+p {
+  font-size: 15px;
+  line-height: 18px;
+  font-weight: 200;
+  margin-bottom: 5px;
+}
+
+.weather-app {
+  width: 400px;
+  max-width: 100%;
+  display: block;
+  margin: 40px auto;
+  background: #f1b963;
+  border-radius: 5px;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  padding: 3rem 2rem;
+  text-align: center;
 }
