--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@ h2 {
 h3 {
   font-size: 20px;
   line-height: 24px;
-  margin: 1rem 0 2rem;
+  margin: 10px 0;
 }
 
 p {
@@ -21,6 +21,30 @@ p {
   line-height: 18px;
   font-weight: 200;
   margin-bottom: 5px;
+}
+
+img {
+  max-width: 100%;
+}
+
+ul {
+  padding: 40px 0 30px;
+}
+
+footer a {
+  color: #333333;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: white;
+}
+
+footer {
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: 200;
+  margin-top: 20px;
 }
 
 .weather-app {
@@ -34,4 +58,26 @@ p {
   font-family: "Poppins", sans-serif;
   padding: 3rem 2rem;
   text-align: center;
+}
+
+.date {
+  margin: 1rem 0;
+}
+
+.week-temperature {
+  font-weight: 300;
+}
+
+.hero-image {
+  width: 100px;
+}
+
+.filter-white {
+  filter: invert(99%) sepia(53%) saturate(2%) hue-rotate(94deg) brightness(113%)
+    contrast(100%);
+}
+
+.list-images {
+  width: 50px;
+  margin: 5px;
 }
