--- a/src/style.css
+++ b/src/style.css
@@ -7,13 +7,14 @@ h1 {
 h2 {
   font-size: 42px;
   line-height: 50px;
-  margin: 1rem 0;
+  margin: 15px 0;
 }
 
 h3 {
   font-size: 20px;
   line-height: 24px;
   margin: 10px 0;
+  text-transform: capitalize;
 }
 
 p {
@@ -56,12 +57,12 @@ footer {
   border-radius: 5px;
   color: white;
   font-family: "Poppins", sans-serif;
-  padding: 3rem 2rem;
+  padding: 45px 30px;
   text-align: center;
 }
 
 .date {
-  margin: 1rem 0;
+  margin: 15px 0;
 }
 
 .week-temperature {
@@ -80,4 +81,17 @@ footer {
 .list-images {
   width: 50px;
   margin: 5px;
+}
+
+.btn-outline-secondary {
+  border-color: white;
+  color: white;
+  font-size: 15px;
+  transition: all 200ms ease-in-out;
+}
+
+.btn-outline-secondary:hover {
+  border-color: white;
+  background-color: white;
+  color: #333333;
 }
