--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,18 @@ h1 {
 }
 
 h2 {
+  margin: 15px 0;
+}
+
+h2 .current-temperature {
   font-size: 42px;
   line-height: 50px;
-  margin: 15px 0;
+}
+h2 .temp-unit {
+  font-size: 22px;
+  line-height: 1;
+  position: relative;
+  top: -16px;
 }
 
 h3 {
