--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@ h2 .current-temperature {
   line-height: 50px;
 }
 h2 .temp-unit {
-  font-size: 22px;
+  font-size: 18px;
   line-height: 1;
   position: relative;
   top: -16px;
@@ -44,12 +44,11 @@ ul {
   padding: 40px 0 30px;
 }
 
-footer a {
+a {
   color: #333333;
-  text-decoration: none;
 }
 
-footer a:hover {
+a:hover {
   color: white;
 }
 
@@ -106,4 +105,14 @@ footer {
   border-color: white;
   background-color: white;
   color: #333333;
+}
+
+.weather-info .active {
+  color: white;
+  cursor: default;
+  text-decoration: none;
+}
+
+.weather-info .active:hover {
+  text-decoration: none;
 }
